Removing some smell pt 10